--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>poll_app</title>
+    <link rel="stylesheet" href="mysite/polls/statics/polls/style.css">
+    
 </head>
 
 <body>
+    
     {% if latest_question_list %}
     <ul>
         {% for question in latest_question_list %}
